Fix GPA labels on mobile

--- a/docs/style/style.css
+++ b/docs/style/style.css
@@ -674,12 +674,6 @@ hr.hero-separator {
 
 .education-degree {
     margin-top: 0.4rem;
-    display: flex;
-    justify-content: space-between;
-}
-
-.education-degree-name {
-    margin-right: 1rem;
 }
 
 .education-degree-minor {
@@ -689,8 +683,7 @@ hr.hero-separator {
 }
 
 .education-gpa {
-    justify-self: end;
-    align-self: center;
+    float: right;
 }
 
 .experience-project-block-title {
